--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">tip-time</string>
+    <string name="calculate">Calculate</string>
+    <string name="amazing_20">Amazing (20%)</string>
+    <string name="good_18">Good (18%)</string>
+    <string name="okay_15">Okay (15%)</string>
+    <string name="cost_of_service">Cost Of Service</string>
+    <string name="round_up_tip">Round Up Tip ?</string>
 </resources>
