--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">tip-time</string>
+    <string name="app_name">Smart Tip</string>
     <string name="calculate">Calculate</string>
     <string name="amazing_20">Amazing (20%)</string>
     <string name="good_18">Good (18%)</string>
